2009-10-31  Peter Bloomfield

	* libbalsa/html.c (lbh_navigation_policy_decision_requested_cb):
	check reason for request.
	(libbalsa_html_new): do not leak GtkAdjustments.

2009-10-30  Peter Bloomfield

	* libbalsa/html.c (lbh_navigation_policy_decision_requested_cb,
	lbh_web_view_ready_idle, lbh_web_view_ready_cb,
	lbh_create_web_view_cb, libbalsa_html_new): handle a clicked
	link that requires a new window.

2009-10-28  Peter Bloomfield

	* src/balsa-mime-widget.c (balsa_mime_widget_destroy): unref
	widget instead of destroying.

2009-10-28  Peter Bloomfield

	* libbalsa/html.c (libbalsa_html_zoom, libbalsa_html_can_select,
	libbalsa_html_select_all, libbalsa_html_copy): add comments and
	indent;
	(libbalsa_html_search_text): build with all widgets.

2009-10-27  Peter Bloomfield

	* libbalsa/html.h: new methods for text search, to access
	WebKitWebView capability.
	* libbalsa/html.c (libbalsa_html_can_search,
	libbalsa_html_search_text): implement them.
	* src/balsa-message.c (bm_find_entry_changed_cb,
	bm_find_again, balsa_message_find_in_message): use them.
	* src/balsa-mime-widget.c (balsa_mime_widget_destroy): work-around
	weird WebKitWebView-GtkClipboard issue.

2009-10-27  Peter Bloomfield

	* src/toolbar-factory.c: show text for "compose" instead of
	"trash/delete".

2009-10-24  Peter Bloomfield

	* src/toolbar-factory.h: new member button_data::is_important.
	* src/toolbar-factory.c (tm_set_tool_item_label): use it.

2009-10-24  Peter Bloomfield

	* src/balsa-app.h: do not include toolbar-factory.h.

2009-10-15  Peter Bloomfield

	GSEAL cleanup

	* configure.in: enable GSEAL if gtk version >= 2.18.
	* libbalsa/address-view.c (lbav_entry_changed_cb):
	* libbalsa/address.c (addrlist_drag_received_cb):
	* libbalsa/html.c (lbh_size_request_cb):
	* libbalsa/identity.c (libbalsa_identity_select_dialog),
	(md_sig_path_changed_cb), (ident_dialog_get_path),
	(libbalsa_identity_config_dialog):
	* libbalsa/libbalsa.c (ask_cert_real):